--- a/teamstats/templates/teamstats/show_all_players.html
+++ b/teamstats/templates/teamstats/show_all_players.html
@@ -29,6 +29,9 @@
         <th class="numericdesc center">
           Pisteet
         </th>
+        <th class="numericdesc center">
+          PPG
+        </th>
       </tr>
     </thead>
 
@@ -51,6 +54,9 @@
           </td>
 	  <td class="center">
             {{ player.points }}
+          </td>
+	  <td class="center">
+            {{ player.ppg|floatformat:2 }}
           </td>
         </tr>
       {% endfor %}
