Float formats to PPG

--- a/teamstats/templates/teamstats/show_player.html
+++ b/teamstats/templates/teamstats/show_player.html
@@ -82,7 +82,7 @@
         {{ player.points }}
       </td>
       <td class="center">
-        {{ player.ppg }}
+        {{ player.ppg|floatformat:2 }}
       </td>
     </tr>
   </tfoot>
