Re-organize static files and add bootstrap

--- a/teamstats/templates/teamstats/base.html
+++ b/teamstats/templates/teamstats/base.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   {% block head %}
   {% endblock %} 
-    <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}style.css" />
+    <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/style.css" />
     <title>{{ team_name }}</title>
 </head>
 
