--- a/teamstats/templates/teamstats/show_all_players.html
+++ b/teamstats/templates/teamstats/show_all_players.html
@@ -8,7 +8,7 @@
 </h1>
 
   {% load static %}
-  <script type="text/javascript" src="{% get_static_prefix %}tablesort.js"></script> 
+  <script type="text/javascript" src="{% get_static_prefix %}js/tablesort.js"></script> 
 
   <table>
 
