--- a/teamstats/templates/teamstats/show_match_registration.html
+++ b/teamstats/templates/teamstats/show_match_registration.html
@@ -4,7 +4,7 @@
 
   {% include "teamstats/header_match.html" %}
 
-  <script type="text/javascript" src="tablesort.js"></script>
+  <script type="text/javascript" src="js/tablesort.js"></script>
 
   <script language="javascript">
     choice = {}
