--- a/teamstats/templates/teamstats/show_match_result.html
+++ b/teamstats/templates/teamstats/show_match_result.html
@@ -10,7 +10,7 @@
   {% endif %}
 
   {% load static %}
-  <script type="text/javascript" src="{% get_static_prefix %}tablesort.js"></script>
+  <script type="text/javascript" src="{% get_static_prefix %}js/tablesort.js"></script>
 
   <table>
 
