--- a/teamstats/templates/teamstats/show_player.html
+++ b/teamstats/templates/teamstats/show_player.html
@@ -11,7 +11,7 @@
 </h2>
 
 {% load static %}
-<script type="text/javascript" src="{% get_static_prefix %}tablesort.js"></script> 
+<script type="text/javascript" src="{% get_static_prefix %}js/tablesort.js"></script> 
 
 <table>
   <thead>
