--- a/teamstats/templates/teamstats/table.html
+++ b/teamstats/templates/teamstats/table.html
@@ -1,5 +1,5 @@
 {% load static %}
-<script type="text/javascript" src="{% get_static_prefix %}tablesort.js"></script> 
+<script type="text/javascript" src="{% get_static_prefix %}js/tablesort.js"></script> 
 
 <div id="taulukko-div">
 
