Use bootstrap, fix menus and some tables

--- a/teamstats/static/css/style.css
+++ b/teamstats/static/css/style.css
@@ -2,8 +2,8 @@
 body {
 	overflow: visible;
 	background-color: #FFFFFF;
-	font-family: Verdana, Arial;
-	font-size: 12pt;
+	/*font-family: Verdana, Arial;*/
+	/*font-size: 12pt;*/
 }
 
 .choice1 {
