--- a/teamstats/templates/teamstats/show_match_registration.html
+++ b/teamstats/templates/teamstats/show_match_registration.html
@@ -32,7 +32,7 @@
     </span>
   {% endfor %}
 
-  <table>
+  <table class="table table-condensed">
     <thead>
       <tr>
         <th class="stringdesc center">
