--- a/teamstats/templates/teamstats/registration_buttons.html
+++ b/teamstats/templates/teamstats/registration_buttons.html
@@ -1,39 +1,39 @@
-<form action="" name="form-{{ id }}" method="post">
+<form action="" class="form-inline" name="form-{{ id }}" method="post">
   {% csrf_token %}
   <td id="edit-{{ id }}">
-    <input type="button" id="edit_button-{{ id }}"
+    <input type="button" class="input-small" id="edit_button-{{ id }}"
            onclick="javascript:editChoice({{ id }})"
            value="Ilmoittaudu" />
   </td>
   <td id="fields-{{ id }}" visibility="false">
-    <span class="choice1">
-      <input type="radio" id="in_radio-{{ id }}"
+    <span class="choice1 help-inline">
+      <label for="in_radio-{{ id }}" class="radio inline">
+        <input type="radio" class="input-small" id="in_radio-{{ id }}"
              name="choice" value="{{ id }}-1"
              disabled="true" checked />
-      <label for="in_radio-{{ id }}">
         IN
       </label>
     </span>
-    <span class="choice2">
-      <input type="radio" id="out_radio-{{ id }}"
+    <span class="choice2 help-inline">
+      <label for="out_radio-{{ id }}" class="radio inline">
+        <input type="radio" class="input-small" id="out_radio-{{ id }}"
              name="choice" value="{{ id }}-2"
              disabled="true" />
-      <label for="out_radio-{{ id }}">
         OUT
       </label>
     </span>
-    <span class="choice3">
-      <input type="radio" id="na_radio-{{ id }}"
+    <span class="choice3 help-inline">
+      <label for="na_radio-{{ id }}" class="radio inline">
+        <input type="radio" class="input-small" id="na_radio-{{ id }}"
              name="choice" value="{{ id }}-3"
              disabled="true" />
-      <label for="na_radio-{{ id }}">
         ?
       </label>
     </span>
-    <input type="submit" id="save_button-{{ id }}"
+    <input type="submit" class="input-small" id="save_button-{{ id }}"
            value="Tallenna" />
 
-    <input type="button" id="cancel_button-{{ id }}"
+    <input type="button" class="input-small" id="cancel_button-{{ id }}"
            onclick="javascript:cancelChoice({{ id }})"
            value="Peruuta" />
   </td>
