Convert to Django 1.5 and add match result edit form

--- a/teamstats/templates/admin/stats/seasonplayer_inline.html
+++ b/teamstats/templates/admin/stats/seasonplayer_inline.html
@@ -38,7 +38,7 @@
      </tbody>
    </table>
 
-  <p><a href="/admin/stats/player/add/">Add player</a></p>
+  {# <p><a href="/admin/stats/player/add/">Add player</a></p> #}
 
 </fieldset>
   </div>
