--- a/teamstats/templates/teamstats/show_match_registration.html
+++ b/teamstats/templates/teamstats/show_match_registration.html
@@ -62,7 +62,7 @@
             {{ player.number }}
           </td>
           <td class="choice{{ player.choice }} left">
-            <a href="{% url teamstats.views.show_player player.player.id %}">
+            <a href="{% url 'show_player' player.player.id %}">
               {{ player.player }}
             </a>
           </td>
