Fix calendar URL and add a link to it

--- a/teamstats/templates/teamstats/show_season.html
+++ b/teamstats/templates/teamstats/show_season.html
@@ -14,6 +14,9 @@
     <a href="{{ season.url }}">Sarjan kotisivut</a>
     </p>
   {% endif %}
+<p>
+  <a href="{% url 'show_season_calendar' season.pk %}">Kalenteri (ICS/iCal)</a>
+</p>
   {% if season.comment %}
     <p>Kommentti: {{ season.comment }}</p>
   {% endif %}
