Show field in season view

--- a/teamstats/templates/teamstats/show_season.html
+++ b/teamstats/templates/teamstats/show_season.html
@@ -109,6 +109,9 @@
 	  <td class="left">
             {{ match.date|date:"G:i" }}
           </td>
+          <td>
+            {{ match.field }}
+          </td>
 	  <td class="center">
             <a href="{% url 'show_match' match.id %}">
               {{ match.opponent }}
